Bug 32418 - [4.3 Regression] ICE in global_alloc, at global.c:514
Summary: [4.3 Regression] ICE in global_alloc, at global.c:514
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
: 32419 32420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-06-20 13:20 UTC by Rask Ingemann Lambertsen
Modified: 2007-06-27 20:15 UTC (History)
3 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: m32c-unknown-elf
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed:


Attachments
Preprocessed testcase (17.57 KB, application/x-bzip2)
2007-06-20 13:21 UTC, Rask Ingemann Lambertsen
Details
Preprocessed source code for the problem in comment 9. (46.44 KB, application/x-bzip2)
2007-06-21 16:15 UTC, Rask Ingemann Lambertsen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rask Ingemann Lambertsen 2007-06-20 13:20:27 UTC
Configure gcc like this:

$ [...]/configure --target m32c-unknown-elf --with-newlib--enable-sim --disable-gdb --disable-nls --enable-languages=c,c++,java

The attached file fails to compile:

$ ./xgcc -B./ ~/unwind-dw2.c -S -dp -o /dev/null -O2
/n/08/rask/src/gcc/libgcc/../gcc/unwind.inc: In function '_Unwind_Resume':
/n/08/rask/src/gcc/libgcc/../gcc/unwind.inc:241: internal compiler error: in global_alloc, at global.c:514
Comment 1 Rask Ingemann Lambertsen 2007-06-20 13:21:50 UTC
Created attachment 13742 [details]
Preprocessed testcase
Comment 2 Rask Ingemann Lambertsen 2007-06-20 13:24:44 UTC
*** Bug 32420 has been marked as a duplicate of this bug. ***
Comment 3 Rask Ingemann Lambertsen 2007-06-20 13:25:18 UTC
*** Bug 32419 has been marked as a duplicate of this bug. ***
Comment 4 Kenneth Zadeck 2007-06-20 17:13:11 UTC
Subject: Re:   New: ICE in global_alloc, at global.c:514

rask at sygehus dot dk wrote:
> Configure gcc like this:
>
> $ [...]/configure --target m32c-unknown-elf --with-newlib--enable-sim
> --disable-gdb --disable-nls --enable-languages=c,c++,java
>
> The attached file fails to compile:
>
> $ ./xgcc -B./ ~/unwind-dw2.c -S -dp -o /dev/null -O2
> /n/08/rask/src/gcc/libgcc/../gcc/unwind.inc: In function '_Unwind_Resume':
> /n/08/rask/src/gcc/libgcc/../gcc/unwind.inc:241: internal compiler error: in
> global_alloc, at global.c:514
>
>
>   
Rask,

The problem here is that the port is defining EH_RETURN_STACKADJ_RTX to
be the pseudo reg (reg:HI 49).  This sounds very wrong to me.

The df scanning code is making this an artificial use in the exit block. 

However, there are no other uses or defs of reg 49 in this function. 
This causes problems. 

Kenny




Comment 5 Rask Ingemann Lambertsen 2007-06-20 17:24:24 UTC
I'll CC DJ Delorie since he'll know why EH_RETURN_STACKADJ_RTX has been defined that way.
Comment 6 DJ Delorie 2007-06-20 17:35:51 UTC
Subject: Re:  ICE in global_alloc, at global.c:514


It was a long time ago, I'm thinking that having too many hard regs
live during reload causes problems on m32c because it has so few
registers.  You can try setting it to R0 and see what else breaks ;-)
Comment 7 Rask Ingemann Lambertsen 2007-06-20 20:08:35 UTC
This is something I have no clue about.
Comment 8 Kenneth Zadeck 2007-06-20 20:12:42 UTC
Subject: Re:  ICE in global_alloc, at global.c:514

rask at sygehus dot dk wrote:
> ------- Comment #7 from rask at sygehus dot dk  2007-06-20 20:08 -------
> This is something I have no clue about.
>
>
>   
try it and see what else breaks.
Comment 9 Rask Ingemann Lambertsen 2007-06-21 15:59:40 UTC
I tried this on top of the patch in comment 3 of bug 32441:

Index: gcc/config/m32c/m32c.c
===================================================================
--- gcc/config/m32c/m32c.c	(revision 125892)
+++ gcc/config/m32c/m32c.c	(working copy)
@@ -1143,7 +1143,7 @@ m32c_eh_return_stackadj_rtx (void)
     {
       rtx sa;
 
-      sa = gen_reg_rtx (Pmode);
+      sa = gen_rtx_REG (Pmode, R0_REGNO);
       cfun->machine->eh_stack_adjust = sa;
     }
   return cfun->machine->eh_stack_adjust;

The build then ends with a reload failure in libstdc++.

Spilling for insn 228.
reload failure for reload 0

Reloads for insn # 228
Reload 0: reload_in (HI) = (plus:HI (reg/f:HI 7 fb)
                                                    (const_int 0 [0x0]))
        A_REGS, RELOAD_FOR_OPERAND_ADDRESS (opnum = 0)
        reload_in_reg: (plus:HI (reg/f:HI 7 fb)
                                                    (const_int 0 [0x0]))

The lreg dump shows some insn sequences which use up both registers in
A_REGS:

(jump_insn 237 235 238 5 (set (pc)
        (label_ref 236)) 163 {jump} (nil))

(barrier 238 237 227)

(code_label/s 227 238 230 6 56 "" [1 uses])

(note 230 227 228 6 [bb 6])

(insn 228 230 229 6 (set (reg:HI 84)
        (reg:HI 4 a0)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 4 a0)
        (nil)))

(insn 229 228 102 6 (set (reg:HI 83)
        (reg:HI 5 a1)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 5 a1)
        (nil)))

...
(jump_insn 243 241 244 13 (set (pc)
        (label_ref 242)) 163 {jump} (nil))

(barrier 244 243 223)

(code_label/s 223 244 226 14 55 "" [1 uses])

(note 226 223 224 14 [bb 14])

(insn 224 226 225 14 (set (reg:HI 84)
        (reg:HI 4 a0)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 4 a0)
        (nil)))

(insn 225 224 166 14 (set (reg:HI 83)
        (reg:HI 5 a1)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 5 a1)
        (nil)))

(note/s 166 225 168 14 "" 52)
...
(insn 203 197 231 15 /home/rask/build/gcc-m32c-unknown-elf/m32c-unknown-elf/libstdc++-v3/include/complex:527 (use (reg/i:HI 0 r0)) -1 (nil))

(code_label/s 231 203 234 16 57 "" [1 uses])

(note 234 231 232 16 [bb 16])

(insn 232 234 233 16 (set (reg:HI 84)
        (reg:HI 4 a0)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 4 a0)
        (nil)))

(insn 233 232 185 16 (set (reg:HI 83)
        (reg:HI 5 a1)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 5 a1)
        (nil)))

(code_label/s 185 233 186 17 53 "" [3 uses])

(note 186 185 187 17 [bb 17])

The usage count is one too high for all the code labels shown above. In
other words, the code that is causing reload problems is dead code. The code
first appears in the "eh" pass and refers to a0 and a1 from the beginning.

int
m32c_eh_return_data_regno (int n)
{
  switch (n)
    {
    case 0:
      return A0_REGNO;
    case 1:
      return A1_REGNO;
    default:
      return INVALID_REGNUM;
    }
}
Comment 10 Rask Ingemann Lambertsen 2007-06-21 16:15:02 UTC
Created attachment 13758 [details]
Preprocessed source code for the problem in comment 9.

$ ./xgcc -B./ -S -dp -o /dev/null ~/complex_io.cc
/home/rask/build/gcc-m32c-unknown-elf/m32c-unknown-elf/libstdc++-v3/include/complex: In function 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&, const std::complex<_Tp>&) [with _Tp = long double, _CharT = char, _Traits = std::char_traits<char>]':
/home/rask/build/gcc-m32c-unknown-elf/m32c-unknown-elf/libstdc++-v3/include/complex:527: error: unable to find a register to spill in class 'A_REGS'
/home/rask/build/gcc-m32c-unknown-elf/m32c-unknown-elf/libstdc++-v3/include/complex:527: error: this is the insn:
(insn 228 230 229 6 (set (reg:HI 84)
        (reg:HI 4 a0)) 171 {movhi_op} (expr_list:REG_DEAD (reg:HI 4 a0)
        (nil)))
/home/rask/build/gcc-m32c-unknown-elf/m32c-unknown-elf/libstdc++-v3/include/complex:527: internal compiler error: in spill_failure, at reload1.c:2002
Comment 11 Rask Ingemann Lambertsen 2007-06-21 18:19:56 UTC
Disregard the comment about the code label use count. They have LABEL_PRESERVE_P (/s) set.
Comment 12 Kenneth Zadeck 2007-06-24 12:20:08 UTC
Subject: Re:  [4.3 Regression] ICE in global_alloc, at global.c:514

rask at sygehus dot dk wrote:

have you done a recent update? there have been two bugs fixed that might
effect this.
Comment 13 Rask Ingemann Lambertsen 2007-06-24 17:38:07 UTC
I updated to revision 125983, which hasn't changed anything as far as I can tell.
Comment 14 Rask Ingemann Lambertsen 2007-06-27 00:35:31 UTC
Notice in comment 10 that there is no optimization flag. Just -O1 is enough to make the reload failure go away. I'll see what the libstdc++ people have to say about that.
Comment 15 Kenneth Zadeck 2007-06-27 18:04:39 UTC
it does not look like you ever dealt with the issue of EH_RETURN_STACKADJ_RTX that i pointed out.  That code is clearly wrong.

Comment 16 Rask Ingemann Lambertsen 2007-06-27 19:15:53 UTC
What's wrong with the patch at the top of comment 9? FWIW, I can now build the m32c after this configure command:

$ /n/12/rask/src/all/configure --target=m32c-unknown-elf --enable-languages=c,c++ --enable-cxx-flags=-O2 --with-newlib --enable-sim --disable-{multilib,nls,gdb}

where --disable-multilib is due to bug 32441 and --enable-cxx-flags=-O2 hides the unrelated reload failure in comment 9.
Comment 17 Kenneth Zadeck 2007-06-27 19:30:53 UTC
Subject: Re:  [4.3 Regression] ICE in global_alloc, at global.c:514

rask at sygehus dot dk wrote:
> ------- Comment #16 from rask at sygehus dot dk  2007-06-27 19:15 -------
> What's wrong with the patch at the top of comment 9? FWIW, I can now build the
> m32c after this configure command:
>
> $ /n/12/rask/src/all/configure --target=m32c-unknown-elf
> --enable-languages=c,c++ --enable-cxx-flags=-O2 --with-newlib --enable-sim
> --disable-{multilib,nls,gdb}
>
> where --disable-multilib is due to bug 32441 and --enable-cxx-flags=-O2 hides
> the unrelated reload failure in comment 9.
>
>
>   
i am sorry for being dense.  but i have completely lost track of this bug.

if i pull the latest code down from the trunk, this patch is not there. 
Is there still a bug related to dataflow on this platform if everything
that needs to be done has been done?

Kenny
Comment 18 Rask Ingemann Lambertsen 2007-06-27 19:48:01 UTC
It has not been committed yet because I feared that it was causing the reload failure. I have now verified that the reload failure still happens with a pre-dataflow checkout, so I'll submit the patch. I think that concludes the dataflow related changes.
Comment 19 Kenneth Zadeck 2007-06-27 19:56:42 UTC
Subject: Re:  [4.3 Regression] ICE in global_alloc, at global.c:514

rask at sygehus dot dk wrote:
> ------- Comment #18 from rask at sygehus dot dk  2007-06-27 19:48 -------
> It has not been committed yet because I feared that it was causing the reload
> failure. I have now verified that the reload failure still happens with a
> pre-dataflow checkout, so I'll submit the patch. I think that concludes the
> dataflow related changes.
>
>
>   
thanks, this was what i suspected.

kenny
Comment 20 Kenneth Zadeck 2007-06-27 20:15:56 UTC
I believe that rask is going to submit the patch at the end of comment #9 to close this bug.
Comment 21 DJ Delorie 2007-06-27 21:28:14 UTC
Subject: Re:  [4.3 Regression] ICE in global_alloc, at global.c:514


The patch in comment #9 is OK with me, please commit it.
Comment 22 Rask Ingemann Lambertsen 2007-06-27 22:23:45 UTC
Subject: Bug 32418

Author: rask
Date: Wed Jun 27 22:23:35 2007
New Revision: 126067

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=126067
Log:
2007-06-27  Rask Ingemann Lambertsen  <rask@sygehus.dk>

	PR target/32418
	* config/m32c/m32c.c (m32c_eh_return_stackadj_rtx): Dataflow fix:
	Use a call clobbered hard reg instead of a pseudo reg.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/m32c/m32c.c