2007-06-27  Rask Ingemann Lambertsen  <rask@sygehus.dk>

PR target/32418
	* config/m32c/m32c.c (m32c_eh_return_stackadj_rtx): Dataflow fix:
	Use a call clobbered hard reg instead of a pseudo reg.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126067 138bc75d-0d04-0410-961f-82ee72b054a4